[workspace]

[package]
name = "esm-graph"
version = "0.1.0"
authors = ["markuskobler <markus@distinctive.co>"]
edition = "2018"

[lib]
name = "esm_graph"
doctest = false
#crate-type = ["cdylib"]

[dependencies]
# neon = "0.4.0"
# neon-serde = "0.3.0"
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"

hashbrown = "0.7"
backtrace = "0.3"
sourcemap = "5.0.0"

swc_atoms = { package = "swc_atoms", version = "0.2.2" }
swc_common = { package = "swc_common", version = "0.5.3", features = ["fold"] }
swc_ecma_ast = { version = "0.17.0", features = ["fold"] }
swc_ecma_parser = "0.19.1"
# swc_ecma_transforms = "0.6.0"
swc_ecma_codegen = "0.16.0"

[dev-dependencies]
difference = "2.0"

# [build-dependencies]
# neon-build = "0.4.0"
