[package]
name = "esm-graph"
version = "0.1.0"
authors = ["Markus Kobler <markuskobler@gmail.com>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "esm-graph"
path = "src/main.rs"
doctest = false

[dependencies]
clap = "2.33"
esm-graph = { package = "esm-graph-core", path = "./core" }

[workspace]
members = [
  "core",
]