[package]
name = "esm-graph-core"
version = "0.1.0"
authors = ["Markus Kobler <markuskobler@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
# name = "esm_graph"
doctest = false

[dependencies]
log = "*"

swc_atoms = { package = "swc_atoms", version = "0.2" }
swc_common = { package = "swc_common", version = "0.5", features = ["fold"] }
swc_ecma_ast = { version = "0.17", features = ["fold"] }
swc_ecma_codegen = "0.16"
swc_ecma_parser = "0.19"

# swc_atoms = { package = "swc_atoms", path="/Users/markus/code/vendor/swc/atoms" }
# swc_common = { package = "swc_common", path="/Users/markus/code/vendor/swc/common", features = ["fold"] }
# swc_ecma_ast = { path="/Users/markus/code/vendor/swc/ecmascript/ast", features = ["fold"] }
# swc_ecma_codegen = { path="/Users/markus/code/vendor/swc/ecmascript/codegen" }
# swc_ecma_parser = { path="/Users/markus/code/vendor/swc/ecmascript/parser" }
#swc_ecma_transforms = { path="/Users/markus/code/vendor/swc/ecmascript/transforms" }

# sourcemap = "4.1"

[dev-dependencies]
difference = "2.0"
